# ads_2

./: CMakeLists.txt  README.md
scripts/: all.sh  applypatch.sh
src/: main.cpp  mainSweep.cpp  sweep.cpp  sweep.hpp  sweep2.cpp  sweepInterval.cpp  sweep_naive.cpp
